                    Removed quality logging from gpsxml, see above for why.
                    Fixed glitches in gpsmap filtering junk points.
                    Dumped wlan-ng channel change commands to null
                    Rolled back to earlier gpsmap earth_distance code since the
                     sped up version doesn't work at the moment.
Dec 07 2003  3.1.0  Tweaked prism2 packet mangling to preserve ICV on packets
                     that don't come in with a FCS set.
                    Restored channel/card reports from server
                    Fixed 802.11b freq-channel translation
                    Switched madwifi combo to priv mode 0 to reduce mode
                     switching overhead when changing channels
                    Added 802.11a frequencies to freq2chan conversion
                    Tweaked hostap monitor mode to be more resilient to 
                     different hostap versions
                    Added pidfile writing to kismet_server
                    Tweaked kismet script to check that the server is actually
                     running before trying to start the client.
Dec 06 2003  3.1.0  Fixed Makefile looking for monitor/unmonitor scripts
                    Added viha registrant (oops)
                    Added most of the infrastructure for MadWifi support but
                     Iwconfig_Set_IntPriv() has to be rewritten to handle
                     subioctls before it'll really work.
                    Added madwifi support.  However, the latest madwifi release
                     appears to not have monitor mode...
                    Fixed dual-arg iwpriv calls (ie, orinoco)
                    Fixed MadWifi support, all madwifi sources should be
                     functioning.
Dec 05 2003  3.1.0  First major CVS update in a while.  Most everything should
                     be working but documentation is a little sketchy about the