@@ -11,6 +11,8 @@ Dec 08 2003  3.1.0  Fixed util.h to include math.h outside of the wext
                     Dumped wlan-ng channel change commands to null
                     Rolled back to earlier gpsmap earth_distance code since the
                      sped up version doesn't work at the moment.
+                    Added prism54g cardsource to work with the prism54.org 
+                     drivers (untested)
 Dec 07 2003  3.1.0  Tweaked prism2 packet mangling to preserve ICV on packets
                      that don't come in with a FCS set.
                     Restored channel/card reports from server
